--- a/css/responsive.css
+++ b/css/responsive.css
@@ -31,7 +31,7 @@ background-repeat: no-repeat;
 background-position: 0 -100px;
 }
     .logo {
-  width: 100%;
+  width: 90px;
 }
     .s-about-img img{
         margin: 0;
