--- a/css/style.css
+++ b/css/style.css
@@ -370,6 +370,7 @@ label {
 .header-cta .call-box {
   display: flex;
   text-align: left;
+  align-items: center;
 }
 .header-cta .call-box .icon img {
   width: 35px;
@@ -445,10 +446,10 @@ label {
 }
 
 .nav-icons img {
-  width: 60px;
-  margin: 5px 5px;
+  width: 220px;
+
   background-color: #fff;
-  border-radius: 50%;
+
   padding: 3px;
 }
 
@@ -746,7 +747,7 @@ label {
   border: none;
   padding-bottom: 15px;
   background: #141b22;
-  padding-top: 15px;
+  padding-top: 0px;
   color: #fff;
   position: relative;
   z-index: 1;
@@ -1174,11 +1175,9 @@ label {
 }
 .call-box span {
   display: block;
-  font-size: 12px;
+  font-size: 10px;
   color: #fff;
   margin-bottom: -5px;
-}
-.call-box strong {
 }
 
 .header-social a {
@@ -6325,7 +6324,7 @@ section:hover .section-title h2::before {
   font-size: 15px;
 }
 .copyright-wrap .container {
-  padding: 20px 0;
+  padding: 10px 0;
 }
 .copyright-wrap li {
   display: inline;
@@ -11614,7 +11613,13 @@ div.single-cta:last-child {
   color: #777;
 }
 .logo {
-  width: 242px;
+  width: 90px;
+}
+
+.logo a img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
 }
 .logo a {
   color: #fff;
