--- a/css/style.css
+++ b/css/style.css
@@ -11948,3 +11948,22 @@ blockquote cite {
 .footer-top.wpding {
   background: #010c26;
 }
+
+/* floating button */
+.float {
+  position: fixed;
+  width: 200px;
+  height: 60px;
+  bottom: 300px;
+  right: 10px;
+  background-color: #002472;
+  color: #fff;
+  border-radius: 50px;
+  text-align: center;
+  box-shadow: 0px 0px 3px #fff;
+  border: none;
+}
+
+.float:hover {
+  font-size: 20px;
+}
